--- a/문자열/27866-checkpoint.ipynb
+++ b/문자열/27866-checkpoint.ipynb
@@ -2,39 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "b49e3e47",
+   "execution_count": 3,
+   "id": "d6fc719a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 4\n",
-      "1 2\n",
-      "3 4\n",
-      "1 4\n",
-      "2 2\n",
-      "3 4 1 2 5\n"
+      "Sprout\n",
+      "3\n",
+      "r\n"
      ]
     }
    ],
    "source": [
-    "n, m = map(int,input().split())\n",
-    "array = [i for i in range(1,n+1)]\n",
-    "t = []\n",
-    "for i in range(m):\n",
-    "    i, j = map(int, input().split())\n",
-    "    t = array[i-1:j]\n",
-    "    t.reverse()\n",
-    "    array[i-1:j] = t\n",
-    "print(*array)"
+    "s = input()\n",
+    "i = int(input())\n",
+    "print(s[i-1])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76b3d158",
+   "id": "3aa0aae6",
    "metadata": {},
    "outputs": [],
    "source": []
