--- a/심화1/10988-checkpoint.ipynb
+++ b/심화1/10988-checkpoint.ipynb
@@ -2,43 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a1c19153",
+   "execution_count": 28,
+   "id": "72c5f471",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "baekjoon\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "while True:\n",
-    "    try:\n",
-    "        a = input()\n",
-    "        print(a)\n",
-    "    except EOFError:\n",
-    "        break"
+    "strs = input()\n",
+    "str = strs[::-1]\n",
+    "if strs == str:\n",
+    "    print(1)\n",
+    "else:\n",
+    "    print(0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fba6f97",
+   "id": "7b9c9e5f",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "while True:\n",
-    "    a = input()\n",
-    "    if a == '':\n",
-    "        break\n",
-    "    else:\n",
-    "        print(a)"
-   ]
+   "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "e34a76f0",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9137b3ab",
    "metadata": {},
-   "source": [
-    "except EOFError:\n",
-    "    break\n",
-    "무한으로 입력되고 아무것도 입력 안했을때 빠져나오는 조건"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
