--- a/심화1/2444-checkpoint.ipynb
+++ b/심화1/2444-checkpoint.ipynb
@@ -2,43 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a1c19153",
+   "execution_count": 31,
+   "id": "3858ef31",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "    *\n",
+      "   ***\n",
+      "  *****\n",
+      " *******\n",
+      "*********\n",
+      " *******\n",
+      "  *****\n",
+      "   ***\n",
+      "    *\n"
+     ]
+    }
+   ],
    "source": [
-    "while True:\n",
-    "    try:\n",
-    "        a = input()\n",
-    "        print(a)\n",
-    "    except EOFError:\n",
-    "        break"
+    "n = int(input())\n",
+    "a = ((2*n)-2) // 2\n",
+    "for i in range(a):\n",
+    "    print(' ' * (a-i-1), '*' * (1+(2*i)))\n",
+    "print('*' * ((2*n)-1))\n",
+    "for i in range(a-1, -1, -1):\n",
+    "    print(' ' * (a-i-1), '*' * (1+(2*i)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fba6f97",
+   "id": "b92e81b7",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "while True:\n",
-    "    a = input()\n",
-    "    if a == '':\n",
-    "        break\n",
-    "    else:\n",
-    "        print(a)"
-   ]
+   "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "e34a76f0",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24f117c4",
    "metadata": {},
-   "source": [
-    "except EOFError:\n",
-    "    break\n",
-    "무한으로 입력되고 아무것도 입력 안했을때 빠져나오는 조건"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
