--- a/심화1/3003-checkpoint.ipynb
+++ b/심화1/3003-checkpoint.ipynb
@@ -2,43 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a1c19153",
+   "execution_count": 32,
+   "id": "f67e1ddd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 2 2 7\n",
+      "1 0 0 0 0 1\n"
+     ]
+    }
+   ],
    "source": [
-    "while True:\n",
-    "    try:\n",
-    "        a = input()\n",
-    "        print(a)\n",
-    "    except EOFError:\n",
-    "        break"
+    "lst = [1,1,2,2,2,8]\n",
+    "ch = list(map(int,input().split()))\n",
+    "result = []\n",
+    "for i in range(6):\n",
+    "    result.append(lst[i]-ch[i])\n",
+    "print(*result)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fba6f97",
+   "id": "bb6b942e",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "while True:\n",
-    "    a = input()\n",
-    "    if a == '':\n",
-    "        break\n",
-    "    else:\n",
-    "        print(a)"
-   ]
+   "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "e34a76f0",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2c81c32",
    "metadata": {},
-   "source": [
-    "except EOFError:\n",
-    "    break\n",
-    "무한으로 입력되고 아무것도 입력 안했을때 빠져나오는 조건"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
