--- a/심화1/25083-checkpoint.ipynb
+++ b/심화1/25083-checkpoint.ipynb
@@ -1,44 +1,53 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a1c19153",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "while True:\n",
-    "    try:\n",
-    "        a = input()\n",
-    "        print(a)\n",
-    "    except EOFError:\n",
-    "        break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3fba6f97",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "while True:\n",
-    "    a = input()\n",
-    "    if a == '':\n",
-    "        break\n",
-    "    else:\n",
-    "        print(a)"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "e34a76f0",
+   "id": "20ad9305",
    "metadata": {},
    "source": [
-    "except EOFError:\n",
-    "    break\n",
-    "무한으로 입력되고 아무것도 입력 안했을때 빠져나오는 조건"
+    "         ,r'\"7\n",
+    "r`-_   ,'  ,/\n",
+    " \\. \". L_r'\n",
+    "   `~\\/\n",
+    "      |\n",
+    "      |"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "f1dd89c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         ,r'\"7\n",
+      "r`-_   ,'  ,/\n",
+      " \\. \". L_r'\n",
+      "   `~\\/\n",
+      "      |\n",
+      "      |\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('         ,r\\'\\\"7')\n",
+    "print('r`-_   ,\\'  ,/')\n",
+    "print(' \\. \". L_r\\'')\n",
+    "print('   `~\\/')\n",
+    "print('      |')\n",
+    "print('      |')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45bd1e49",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
