--- a/문자열/10809-checkpoint.ipynb
+++ b/문자열/10809-checkpoint.ipynb
@@ -2,36 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "224bfad2",
+   "execution_count": 44,
+   "id": "a06c075a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11\n",
-      "10987654321\n",
-      "46\n"
+      "baekjoon\n",
+      "1 0 -1 -1 2 -1 -1 -1 -1 4 3 -1 7 5 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1\n"
      ]
     }
    ],
    "source": [
-    "n = int(input())\n",
-    "s = list(map(int,input()))\n",
-    "sum = 0\n",
-    "for i in range(n):\n",
-    "    sum += s[i]\n",
-    "print(sum)"
+    "lsts = 'abcdefghijklmnopqrstuvwxyz'\n",
+    "s = input().lower()\n",
+    "result = []\n",
+    "for lst in lsts:\n",
+    "    result.append(s.find(lst))\n",
+    "print(*result)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d86c21c",
+   "id": "a37e4466",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "1 0 -1 -1 2 -1 -1 -1 -1 4 3 -1 -1 7 5 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1\n",
+    "1 0 -1 -1 2 -1 -1 -1 -1 4 3 -1 7 5 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1"
+   ]
   }
  ],
  "metadata": {
