--- a/문자열/2675-checkpoint.ipynb
+++ b/문자열/2675-checkpoint.ipynb
@@ -2,33 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "224bfad2",
+   "execution_count": 1,
+   "id": "583a8c83",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11\n",
-      "10987654321\n",
-      "46\n"
+      "2\n",
+      "3 ABC\n",
+      "AAABBBCCC\n",
+      "4 ?HTP\n",
+      "????HHHHTTTTPPPP\n"
      ]
     }
    ],
    "source": [
-    "n = int(input())\n",
-    "s = list(map(int,input()))\n",
-    "sum = 0\n",
-    "for i in range(n):\n",
-    "    sum += s[i]\n",
-    "print(sum)"
+    "t = int(input())\n",
+    "for i in range(t):\n",
+    "    r, s = input().split()\n",
+    "    r = int(r)\n",
+    "    for j in range(len(s)):\n",
+    "        print(s[j]*r, end='')\n",
+    "    print()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d86c21c",
+   "id": "7d945f06",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cafc2465",
    "metadata": {},
    "outputs": [],
    "source": []
