--- a/문자열/1152-checkpoint.ipynb
+++ b/문자열/1152-checkpoint.ipynb
@@ -2,33 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "224bfad2",
+   "execution_count": 3,
+   "id": "02c04deb",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11\n",
-      "10987654321\n",
-      "46\n"
+      "The Curious Case of Benjamin Button\n",
+      "6\n"
      ]
     }
    ],
    "source": [
-    "n = int(input())\n",
-    "s = list(map(int,input()))\n",
-    "sum = 0\n",
-    "for i in range(n):\n",
-    "    sum += s[i]\n",
-    "print(sum)"
+    "s = list(map(str,input().split()))\n",
+    "print(len(s))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d86c21c",
+   "id": "31f1d7b9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a962676",
    "metadata": {},
    "outputs": [],
    "source": []
