--- a/문자열/2908-checkpoint.ipynb
+++ b/문자열/2908-checkpoint.ipynb
@@ -2,33 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "224bfad2",
+   "execution_count": 7,
+   "id": "ebe1e2d1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11\n",
-      "10987654321\n",
-      "46\n"
+      "734 893\n",
+      "437\n"
      ]
     }
    ],
    "source": [
-    "n = int(input())\n",
-    "s = list(map(int,input()))\n",
-    "sum = 0\n",
-    "for i in range(n):\n",
-    "    sum += s[i]\n",
-    "print(sum)"
+    "a,b = input().split()\n",
+    "a = a[::-1]\n",
+    "b = b[::-1]\n",
+    "if int(a) < int(b):\n",
+    "    print(b)\n",
+    "elif int(a) > int(b):\n",
+    "    print(a)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d86c21c",
+   "id": "844293b0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "583d0c4c",
    "metadata": {},
    "outputs": [],
    "source": []
