--- a/문자열/5622-checkpoint.ipynb
+++ b/문자열/5622-checkpoint.ipynb
@@ -2,33 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "224bfad2",
+   "execution_count": 8,
+   "id": "f7def734",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11\n",
-      "10987654321\n",
-      "46\n"
+      "WA\n",
+      "13\n"
      ]
     }
    ],
    "source": [
-    "n = int(input())\n",
-    "s = list(map(int,input()))\n",
-    "sum = 0\n",
-    "for i in range(n):\n",
-    "    sum += s[i]\n",
-    "print(sum)"
+    "dics = {'ABC': 3, 'DEF': 4, 'GHI': 5, 'JKL': 6, 'MNO': 7, 'PQRS': 8, 'TUV': 9, 'WXYZ' : 10}\n",
+    "strs = input()\n",
+    "list = []\n",
+    "for dic in dics:\n",
+    "    for str in strs:\n",
+    "        if str in dic:\n",
+    "            list.append(dics[dic])\n",
+    "            \n",
+    "print(sum(list))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d86c21c",
+   "id": "5a142373",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d393011",
    "metadata": {},
    "outputs": [],
    "source": []
