--- a/1차원 배열/1546-checkpoint.ipynb
+++ b/1차원 배열/1546-checkpoint.ipynb
@@ -2,39 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "b49e3e47",
+   "execution_count": 3,
+   "id": "9a15cd8c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 4\n",
-      "1 2\n",
-      "3 4\n",
-      "1 4\n",
-      "2 2\n",
-      "3 4 1 2 5\n"
+      "3\n",
+      "40 80 60\n",
+      "75.0\n"
      ]
     }
    ],
    "source": [
-    "n, m = map(int,input().split())\n",
-    "array = [i for i in range(1,n+1)]\n",
-    "t = []\n",
-    "for i in range(m):\n",
-    "    i, j = map(int, input().split())\n",
-    "    t = array[i-1:j]\n",
-    "    t.reverse()\n",
-    "    array[i-1:j] = t\n",
-    "print(*array)"
+    "n = int(input())\n",
+    "score = list(map(int,input().split()))\n",
+    "m = max(score)\n",
+    "for i in range(n):\n",
+    "    score[i] = score[i]/m*100\n",
+    "print(sum(score)/n)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76b3d158",
+   "id": "22096e6d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90563d5f",
    "metadata": {},
    "outputs": [],
    "source": []
